Modified to perform in parallel

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# @format
-
 name: Create env
 
 on:
@@ -32,22 +30,26 @@ jobs:
         with:
           path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - name: Dashboard
+
+  dashboard:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package: ['Dreamacro/clash-dashboard', 'haishanh/yacd']
+        dir: ['clash-dashboard', 'yacd']
+    steps:
+      - name: Checkout and Build
         env:
-          CLASH_DASHBOARD: 'https://github.com/Dreamacro/clash-dashboard.git'
-          DIR: 'clash-dashboard'
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh repo clone Dreamacro/clash-dashboard
-          cd ${{ env.DIR }} && pnpm i --no-frozen-lockfile && pnpm build
-      - name: yacd
-        env:
-          CLASH_YACD: 'https://github.com/haishanh/yacd'
-          DIR: 'yacd'
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh repo clone haishanh/yacd
-          cd ${{ env.DIR }} && pnpm i --no-frozen-lockfile && pnpm build
+          gh repo clone ${{ matrix.package }}
+          cd ${{ matrix.dir }} && pnpm i --no-frozen-lockfile && pnpm build
+
+  publish:
+    needs: dashboard
+    runs-on: ubuntu-latest
+    steps:
       - name: publish docker images
         uses: docker/login-action@v2
         with:
