--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
     paths: ['dockerfile']
+  pull_request:
+    branches:
+      - "!main"
 env:
   version: latest
 
